syntax = "proto3";

option csharp_namespace = "GrpcCacher.Interfaces";

package common;

service CommonRpc {
  rpc CallApi (RequestMessage) returns (ResponseMessage);
}

message RequestMessage {
  string CommandName = 1;
  string TableStandardName = 2;
  string WhereParam = 3;
  string OrderParam = 4;
  bool Desc = 5;
  int32 PageIndex = 6;
  int32 PageSize = 7;
  string SelectedFields = 8;
}

message ResponseMessage {
  bool Success = 1;
  string Data = 2;
  int32 Total = 3;
  string Message = 4;
}
